- Fix horizontal scroll bug

--- a/src/AHNet.Web/wwwroot/css/site.css
+++ b/src/AHNet.Web/wwwroot/css/site.css
@@ -1,4 +1,5 @@
 ﻿body {
+    background-color: #fff;
     padding-bottom: 20px;
     font-size: 20px;
 }
